<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description_event_icon"
        android:padding="@dimen/activity_margin_half"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_half">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin_quarter"
            android:text="@string/placeholder_title"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/place_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin_quarter"
            android:text="@string/placeholder_place"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>