<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginTop="56dp"
                android:layout_height="72dp">

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/text_with_left_icon_default_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_text_size"/>

            </FrameLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/date_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_line_padding"
                android:layout_marginTop="@dimen/text_line_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_event_black_24dp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/date_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/text_with_left_icon_default_margin"
                    android:text="@string/placeholder_date"
                    android:textSize="@dimen/event_detail_text_size"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/place_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_line_padding"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_place_black_24dp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/place_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/text_with_left_icon_default_margin"
                    android:text="@string/placeholder_place"
                    android:textSize="@dimen/event_detail_text_size"/>

            </FrameLayout>

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_with_left_icon_default_margin"
                android:text="@string/placeholder_description"
                android:textSize="@dimen/event_detail_text_size"
                tools:ignore="RtlSymmetry"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_email_white_36dp"
        app:borderWidth="0dp"/>

</android.support.design.widget.CoordinatorLayout>
